--- a/NEWS.org
+++ b/NEWS.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2015-08-12>
+#+DATE: Time-stamp: <2015-08-30>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -18,18 +18,22 @@
 
 Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
 
-** Version 162-1, not yet released, targeted for August
-   - Sending code to the ANYSClassics GUI as well, not only to the
-     restricted interactive solver (currently only on GNU-Linux and
-     Unix with C-c C-j, C-c C-u, C-c C-c).
+** Version 162-1, not yet released, targeted for September
+   - Sending code to the ANYSClassics GUI is now possible as well, not
+     only to the restricted interactive solver (currently only on
+     GNU-Linux and Unix with C-c C-j, C-c C-u, C-c C-c).
 
-   - Checking available licenses - fast and simple - is now also
-     available on Windows platforms with "C-c C-l".
+   - Checking available licenses - in a fast and simple way - is now
+     also available on Windows platforms with "C-c C-l".
 
    - Reorganised and simplified the installation and configuration.
      Made the initialisation defaults more intelligent,
      i. e. searching for installation paths with environment
      variables, etc.
+
+   - New customisation variable `ansys-parameter-help-duration' for
+     adjusting the display duration of the
+     `ansys-show-command-parameters' overlay.
 
    - Reorganised and improved the menu items, separated general ANSYS
      tasks from APDL coding with two main menu Entries: A-Mode and
@@ -44,7 +48,7 @@ Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
      logical blocks to the interpreter instead of only the current
      code line.
 
-   - Changed the versioning scheme
+   - Changed ANSYS-Mode's versioning scheme from 16.2.1 to 162-1
 
 ** Version 16.1.1 July 2015
    - The command `ansys-show-command-parameters' (M-?) does
