--- a/TODO.org
+++ b/TODO.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2015-09-02>
+#+DATE: Time-stamp: <2015-11-10>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: html-link-use-abs-url:nil html-postamble:t html-preamble:t
 #+OPTIONS: html-scripts:t html-style:t html5-fancy:nil tex:t
@@ -17,9 +17,8 @@
 #+STARTUP: showall
 * 162-1:
 ** Bugs
-   - Documentation of installation, usage and configuration!
-     + C-c C-wyx
-     + sending to classics
+   - RESCOMBINE is not fontified
+   - CEWRITE is not fontified
    - M-? on an empty buffer returns *abbr* help instead of warning
    - C-c C-j tries to send a next line in the LAST line and after an
      /exit command
@@ -28,12 +27,24 @@
      status to changed!
    - error for -skeleton-outline-template when called ansys-mode
      for an unnamed file without extension.
+   - C-c C-s first time visit: User variables file-name-extension:
+     Wrong type argument: stringp, nilError during redisplay:
+     (jit-lock-function 1) signaled (wrong-type-argument stringp nil)
    - APDL + WB -> Window Name is ... - Mechanical APDL (ANSYS
      Structural)
 ** Freeze
-   - list of all new functions: bug-report.sh, remove spurious
-     defcustoms which are calculated, or leave them as last resort?
+   - Documentation of installation, usage and configuration!
+     + C-c C-{w,y,x}
+     + sending to classics
+   - Menu for checking availablity for the X11 helper functions
+   - List of all new functions <- bug-report.sh
 ** Wish-list
+   - remove spurious defcustoms which are calculated, or leave them as
+     last resort?
+   - a-start-wb: start-process seemingly uses the current working
+     directory, there might be a problem, when "pwd" of the curretn
+     buffer was/is a network drive which might temporarily not
+     available.
    - add bbdb files to emacs packages
    - -help-program-parameters obsolete
    - option to make eww default help browser
